--- a/style.css
+++ b/style.css
@@ -21,6 +21,9 @@
     --textColor: #1a2428;
     --bgColor: #ffff;
 }
+section{
+    padding: 4.5rem 0.5rem;
+}
 img{
     width: 100%;
 }
@@ -92,4 +95,60 @@ header{
     cursor: pointer;
     z-index: 10001;
     display: none;
+}
+.container{
+    position: relative;
+    width: 100%;
+    min-height: 640px;
+    display: flex;
+    align-items: center;
+    background: url(img/background1.webp);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    overflow: hidden;
+}
+.container img{
+    width: 400px;
+    position: absolute;
+    bottom: -500px;
+    right: 200px;
+}
+.home-text{
+    padding: 0 150px;
+}
+.home-text span{
+    font-weight: 400;
+    text-transform: uppercase;
+    color: var(--greenColor);
+}
+.home-text h1{
+    font-size: 2.4rem;
+    font-weight: 700;
+    margin-bottom: 1rem;
+}
+.btn{
+    padding: 0.6rem 1rem;
+    background: var(--greenColor);
+    color: var(--bgColor);
+    font-weight: 400;
+    border-radius: 5rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    column-gap: 00.5rem;
+    max-width: 160px;
+}
+/* right-arrow button */
+.btn .bx{
+    padding: 4px;
+    background: var(--bgColor);
+    color: var(--textColor);
+    border-radius: 1rem;
+    font-size: 20px;
+    margin: auto;
+}
+.btn:hover{
+    background: var(--light-orangeColor);
+    transition: 0.2s ease;
 }
