--- a/style.css
+++ b/style.css
@@ -152,6 +152,7 @@ header{
     background: var(--light-orangeColor);
     transition: 0.2s ease;
 }
+/* Slide Swiper right */
 .swiper-button-next{
     background: url(img/right-arrow.png);
     background-repeat: no-repeat;
@@ -162,6 +163,7 @@ header{
 .swiper-button-next::after{
     display: none; 
 }
+/* Slide Swiper left */
 .swiper-button-prev{
     background: url(img/left-arrow.png);
     background-repeat: no-repeat;
@@ -171,4 +173,86 @@ header{
 }
 .swiper-button-prev::after{
     display: none; 
+}
+
+/* CATEGORIES  SECTION */
+.heading{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.heading h1{
+    font-size: 1.6rem;
+    font-weight: 600;
+}
+.heading span{
+    color: var(--greenColor);
+}
+.categories{
+    max-width: 968px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+/* CATEGORIES-CONTAINER */
+.categories-container{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(180px,auto));
+    gap: 1rem;
+    margin-top: 2rem;
+}
+.categories-container .box{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+    border-radius: 0.5rem;
+}
+.categories-container .box img{
+    width: 100%;
+    height: 100px;
+    object-fit: contain;
+    object-position: center;
+}
+.categories-container .box h2{
+    font-size: 1rem;
+    font-weight: 600;
+}
+.categories-container .box span{
+    font-size: 0.8rem;
+    font-weight: 400;
+    margin-bottom: 1rem;
+}
+.categories-container .box .bx {
+   padding: 10px;
+   background: var(--greenColor);
+   color: var(--bgColor);
+   border-radius: 5rem;
+   position: absolute;
+   bottom: -8%;
+   display: none;
+}
+.categories-container .box .bx:hover{
+    background: var(--light-orangeColor);
+    transition: 0.2s all linear;
+}
+.categories-container .box:hover .bx{
+    transition: 0.2s all linear;
+    display: block;
+}
+.box1{
+    background: #fef4ea;
+}
+.box2{
+    background: #e9f4e3;
+}
+.box3{
+    background: #faeaea;
+}
+.box4{
+    background: #eeeef9;
+}
+.box5{
+    background: #f7f6d7;
 }
