--- a/style.css
+++ b/style.css
@@ -256,3 +256,59 @@ header{
 .box5{
     background: #f7f6d7;
 }
+
+/* PRODUCTS SECTION */
+.products{
+    max-width: 968px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+/* PRODUCTS CONTAINER  */
+.products-container{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(260px,auto));
+    gap: 1.5rem;
+    margin-top: 2rem;
+}
+.products-container .box{
+    padding: 20px;
+    box-shadow: 1px 2px 11px 4px rgba(14 55 54 /15%);
+    border-radius: 0.5rem;
+    position: relative;
+}
+.products-container .box img{
+    width: 100%;
+    height: 200px;
+    object-fit: contain;
+    object-position: center;
+}
+.products-container .box span{
+    font-size: 13px;
+    font-weight: 500;
+}
+.products-container .box h2{
+    font-size: 1.2rem;
+    font-weight: 600;
+    /* margin-top: 0.5rem;
+    color: var(--light-orangeColor); */
+}
+.products-container .box .price{
+    font-size: 1rem;
+    font-weight: 600;
+    margin-top: 0.5rem;
+    color: var(--light-orangeColor);
+}
+.products-container .box .price span{
+    color: var(--textColor);
+}
+.products-container .box .bx-cart-alt{
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    padding: 10px;
+    background: var(--greenColor);
+    color: var(--bgColor);
+    font-size: 20px;
+    border-radius: 0.5rem 0 0.5rem 0;
+}
