css for color evalope, form and copyright

--- a/style.css
+++ b/style.css
@@ -458,4 +458,29 @@ header{
     color: var(--bgColor);
     transition: 0.2s all linear;
 }
-.
+.footer-box form{
+    border-bottom: 1px solid var(--textColor);
+    padding: 10px;
+    display: flex;
+    align-items: center;
+    column-gap: 0.5rem;
+}
+.footer-box form input{
+    background: transparent;
+    border: none;
+    outline: none;
+}
+.footer-box form .bx{
+    font-size: 20px;
+    color: var(--light-orangeColor);
+    cursor: pointer;
+}
+.footer-box form .bxs-envelope{
+    color: var(--greenColor);
+}
+
+/* COPYRIGHT */
+.copyright{
+    text-align: center;
+    padding: 20px;
+}
